--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ anyio==4.5.2
 asgiref==3.8.1
 async-timeout==5.0.1
 attrs==25.3.0
-backports.zoneinfo==0.2.1
+# backports.zoneinfo==0.2.1
 certifi==2025.4.26
 charset-normalizer==3.4.2
 distro==1.9.0
